# lyremember

./: .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_EXPLAINED.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_GUIDE.md  LICENSE  MASTER_PLAN.md  README.md  TAURI_BACKEND_CLARIFICATION.md  TAURI_INTEGRATION_COMPLETE.md  cliff.toml  requirements.txt  setup.py
.github/workflows/: ci-frontend.yml  ci-python.yml  ci-rust.yml  ci.yml  release.yml
.husky/: pre-commit
data/samples/: sample_es.json  sample_fr.json
docs/: ARCHITECTURE.md  FINAL_DECISIONS.md  INDEX.md  MASTER_PLAN.md  RUST_OPTION.md  TAURI_FRONTEND_LINK.md  TAURI_INTEGRATION_COMPLETE.md  TECH_CHOICES.md  TECH_STACK_FINAL.md  TRANSLATION_PHONETIC_STRATEGY.md  UI_LIBRARIES.md  USER_STORIES.md  USER_STORIES_V2.md  VUE_TAURI_GUIDE.md  usage_guide.md
docs/PROMPTS/: audit-and-issues-workflow.md
docs/spikes/: 2026-05-genius-api.md  2026-05-song-detection.md
legacy/: README.md
legacy/python-cli/: demo.py
legacy/python-cli/data/samples/: sample_en.json
legacy/python-cli/lyremember/: __init__.py  cli.py  file_importer.py  models.py  practice_engine.py  song_manager.py  user_manager.py  utils.py
legacy/python-cli/tests/: __init__.py  test_file_importer.py  test_genius_api.py  test_models.py  test_practice_engine.py  test_song_manager.py  test_storage.py  test_user_manager.py  test_utils.py
lyremember/: __init__.py  cli.py  genius_api.py  models.py  practice_engine.py  progress_tracker.py  song_manager.py  storage.py  utils.py
lyremember-app/: .prettierignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts  wdio.conf.ts
lyremember-app/scripts/: setup-hooks.js
lyremember-app/src/: App.vue  main.ts
lyremember-app/src-tauri/: Cargo.toml  tauri.conf.json
lyremember-app/src-tauri/src/: commands.rs  lib.rs  main.rs
lyremember-app/src/components/layout/: AppHeader.vue  AppSidebar.vue  BottomNav.vue  MainLayout.vue
lyremember-app/src/components/practice/: FillBlankMode.vue  KaraokeMode.vue  MCQMode.vue  McqMode.vue  OralMode.vue  PracticeResult.vue
lyremember-app/src/components/ui/: Alert.spec.ts  Alert.vue  Button.spec.ts  Button.vue  Card.vue  Input.vue  KeyboardShortcutsHelp.vue  Spinner.vue  StatsCard.vue  Toast.vue
lyremember-app/src/composables/: useKeyboardShortcuts.ts  useShortcuts.ts  useToast.ts  useUserStats.ts
lyremember-app/src/composables/__tests__/: useToast.test.ts
lyremember-app/src/i18n/: index.ts  parity.spec.ts
lyremember-app/src/i18n/locales/: en.json  fr.json  ja.json  ko.json
lyremember-app/src/lib/: file-parsers.spec.ts  file-parsers.ts  oral-scoring.spec.ts  oral-scoring.ts  tauri-api.ts
lyremember-app/src/router/: index.ts
lyremember-app/src/stores/: auth.ts  practice.ts  songs.spec.ts  songs.ts  ui.spec.ts  ui.ts
lyremember-app/src/styles/: main.css
lyremember-app/src/types/: index.ts
lyremember-app/src/views/: AddSongView.vue  DashboardView.vue  LoginView.vue  NotFoundView.vue  PracticeView.vue  ProfileView.vue  RegisterView.vue  SettingsView.vue  SongDetailView.vue  SongsView.vue
lyremember-app/tests/e2e/: auth.spec.ts  practice.spec.ts  songs.spec.ts
rust-backend/: .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  requirements.txt
rust-backend/examples/: basic_usage.rs
rust-backend/src/: config.rs  error.rs  lib.rs
rust-backend/src/db/: mod.rs  sqlite.rs
rust-backend/src/models/: mod.rs  session.rs  song.rs  user.rs
rust-backend/src/services/: auth.rs  mod.rs  phonetic.rs  practice.rs  songs.rs  translation.rs
rust-backend/tests/: integration_test.rs
scripts/: termux-install.sh
tests/: test_song_manager.py  test_storage.py  test_utils.py
(+4 files in other folders)
