[package]
name = "lyremember_backend"
version = "0.1.0"
edition = "2021"
authors = ["LyRemember Contributors"]
description = "Backend for LyRemember - Lyrics memorization app"

[dependencies]
# Database
rusqlite = { version = "0.30", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP Client for translation (rustls = no OpenSSL dependency, works on Android)
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Authentication
bcrypt = "0.15"
jsonwebtoken = "9.2"

# Python bridge for phonetics (optional — not available on Android/mobile)
pyo3 = { version = "0.20", features = ["auto-initialize"], optional = true }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"

[features]
default = ["python"]
python = ["pyo3"]

[dev-dependencies]
tempfile = "3.0"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"
