[package]
name = "lyremember-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lyremember_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# `python` (PyO3 bridge pour la phonétique) est activé par défaut sur les
# cibles desktop. Les builds Android passent `--no-default-features` pour
# l'exclure (PyO3 n'est pas cross-compilable vers Android — voir
# rust-backend/Cargo.toml).
default = ["python"]
python = ["lyremember_backend/python"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Backend integration.
# default-features = false : la feature `python` est apportee
# explicitement par la feature locale `python = ["lyremember_backend/python"]`,
# activee par defaut sur desktop et desactivee pour Android via
# `--no-default-features` au build mobile.
lyremember_backend = { path = "../../rust-backend", default-features = false }
tokio = { version = "1", features = ["full"] }

